# AlChess

./: .gitattributes  .gitignore  2-Lancer_AlChess.bat  CLAUDE.md  COMMANDES.txt  CONTEXTE.md  CONTEXTE_METIER.md  CONTEXTE_PERSISTANCE.md  CONTEXTE_VUE.md  CORRECTION_TRADUCTION.md  Description des fonctions de manage.py.txt  ETAT_PROJET.md  GUIDE_EXERCICE_AJOUT_LIGNE.md  HISTORIQUE_BUGS.md  I18N.md  INSTALLATION_ALCHESS.md  INSTALLATION_NICLINK.md  INSTRUCTION GESTION USB.txt  Plan plusieurs moteurs.txt  README.md  REARCHITECTURE_ALAIN.md  REARCHITECTURE_CLAUDE_CODE.md  SOUVENIR  SPECIFICATIONS.md  TACHES.md  TESTS.md  TEST_RESULTATS.md  install.sh  install_alchess.ps1  installer.bat  make_release.sh  requirements.txt  start_alchess.ps1  start_alchess.sh  start_chessnut.sh  start_niclink.sh  test_hidapi_windows.py  update_stable.sh
nicsoft/: config.py  fichiersPresent.txt  platform_utils.py  pyproject.toml
nicsoft/core/: board_adapter.py  game_manager.py
nicsoft/engine/: analyse.py  board_utils.py  engine_manager.py  pgn_manager.py  players.py
nicsoft/exercices/: __main__.py  eco_import complete 1er version.py  eco_import rapide sans poids.py  import_lignes.py  manage.py
nicsoft/game/: analyse.py  display.py  pgn_manager.py
nicsoft/labo/: __main__.py  __main__labo.py  labo.py
nicsoft/niclink/: __init__.py  driver.py  hid_backend.py  virtual_board.py
nicsoft/play_human/: __main__.py
nicsoft/play_menu/: __main__.py
nicsoft/play_pedagogique/: __main__.py
nicsoft/play_stockfish/: __main__.py
nicsoft/retranscription/: __init__.py  retranscription.py
nicsoft/tests/: test_app_state.py  test_move_matching.py  test_pgn.py  (+2 more)
(+174 files in other folders)
