#  AlChess is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
#
#  AlChess is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License along with AlChess. If not, see <https://www.gnu.org/licenses/>.
[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"

[project]
name="alchess"
version="1.0.0"
authors=[
    { name = "Alain Delree", email="alain.delree@gmail.com" }
]
description='Application connectant un échiquier physique Chessnut Air à une interface web pédagogique.'
keywords=["Chessnut", "Chessnut air", "e-board", "EasyLinkSDK", "chess", "pedagogique"]
classifiers= [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Operating System :: POSIX :: Linux",
    "Topic :: Games/Entertainment :: Board Games",
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"

[project.urls]
Repository = 'https://github.com/AlainDelree/AlChess'
issues = 'https://github.com/AlainDelree/AlChess/issues'

[tool.setuptools.packages]
find = {}
